# colabfit-mcp

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  LICENSE  Makefile  README  README.md  agent.py  colabfit_mcp.py  compose.cpu.yaml  compose.nvidia.yaml  compose.yaml  entrypoint.sh  example.env  pyproject.toml  server.json  start.sh
.github/workflows/: mcp.yaml  publish.yaml
docker-colabfit/: build_colabfit_kdp_base.sh
docker-colabfit/docker/git/: Dockerfile
docker-colabfit/docker/minimal/: Dockerfile
docker-colabfit/docker/sys/: Dockerfile
docker-colabfit/docker/torchml/: Dockerfile
src/colabfit_mcp/: __init__.py  config.py
src/colabfit_mcp/helpers/: build_utils.py  crystal_data.py  dataset_resolver.py  device.py  driver_worker.py  hf_dataset.py  kim.py  kim_runner.py  kliff_trainer.py  kliff_utils.py  naming.py  structures.py  training.py  xyz.py
src/colabfit_mcp/tools/: __init__.py  build_dataset.py  create_structure.py  dataset_resolver.py  deploy.py  download.py  fine_tune.py  local_datasets.py  search.py  status.py  test_driver.py  train.py  use_model.py
